testsuite/deprecated/veronac/codegen/compile-fail/main-class-has-generics.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// CHECK-L: main-class-has-generics.verona:${LINE:+1}:7: error: Class 'Main' must not be generic
class Main[X] {
  main() { }
}
